# language-fixer

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  PUBLISH_CHECKLIST.md  README.md  com.languagefixer.plist.template  config.example.yaml  pyproject.toml
mappings/: arabic-english.json  hebrew-english.json  russian-english.json
scripts/: build.sh  install.sh  is_running.sh  restart.sh  uninstall.sh  view_logs.sh
src/language_fixer/: __init__.py  __main__.py  cli.py  config.py  converter.py  generate_mapping.py  install_service.py  listener.py
tests/: __init__.py  test_converter.py  test_listener.py
