[project]
name = "language-fixer"
version = "0.2.0"
description = "A flexible macOS utility that retroactively fixes text typed in the wrong keyboard layout with support for multiple languages"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Avigail Marecha", email = "your.email@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0",
]
keywords = ["macos", "keyboard", "hebrew", "arabic", "russian", "english", "layout", "converter", "input", "rtl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Text Processing",
]

[project.scripts]
language-fixer = "language_fixer.__main__:main"
language-fixer-generate-mapping = "language_fixer.generate_mapping:main"
language-fixer-install-service = "language_fixer.install_service:main"
language-fixer-uninstall-service = "language_fixer.install_service:main_uninstall"

[project.urls]
Homepage = "https://github.com/roy651/language-fixer"
Issues = "https://github.com/roy651/language-fixer/issues"
Repository = "https://github.com/roy651/language-fixer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/language_fixer"]

[tool.hatch.build.targets.wheel.shared-data]
"mappings" = "share/language-fixer/mappings"
"config.example.yaml" = "share/language-fixer/config.example.yaml"

# Include package data
[tool.hatch.build.targets.wheel.force-include]
"mappings" = "language_fixer/mappings"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
